# tatami_stats

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: check-install.yaml  doxygenate.yaml  run-tests.yaml
cmake/: Config.cmake.in
docs/: Doxyfile  _formulas.tex  _formulas_dark.tex  annotated.html  classes.html  classtatami__stats_1_1LocalOutputBuffer-members.html  classtatami__stats_1_1LocalOutputBuffer.html  classtatami__stats_1_1LocalOutputBuffers-members.html  classtatami__stats_1_1LocalOutputBuffers.html  classtatami__stats_1_1quantiles_1_1SingleQuantile-members.html  classtatami__stats_1_1quantiles_1_1SingleQuantile.html  classtatami__stats_1_1quantiles_1_1SingleQuantileVariableLength-members.html  classtatami__stats_1_1quantiles_1_1SingleQuantileVariableLength.html  classtatami__stats_1_1ranges_1_1RunningDense-members.html  classtatami__stats_1_1ranges_1_1RunningDense.html  classtatami__stats_1_1ranges_1_1RunningSparse-members.html  classtatami__stats_1_1ranges_1_1RunningSparse.html  classtatami__stats_1_1sums_1_1RunningDense-members.html  classtatami__stats_1_1sums_1_1RunningDense.html  classtatami__stats_1_1sums_1_1RunningSparse-members.html  classtatami__stats_1_1sums_1_1RunningSparse.html  classtatami__stats_1_1variances_1_1RunningDense-members.html  classtatami__stats_1_1variances_1_1RunningDense.html  classtatami__stats_1_1variances_1_1RunningSparse-members.html  classtatami__stats_1_1variances_1_1RunningSparse.html  count_8hpp.html  count_8hpp_source.html  counts_8hpp.html  counts_8hpp_source.html  dir_a6d420980f2997fb57812940badbc26d.html  dir_a6d420980f2997fb57812940badbc26d_dep.map  dir_a6d420980f2997fb57812940badbc26d_dep.md5  dir_b747d6c0d081a332d63ccd1024d13c94.html  doxygen_crawl.html  files.html  functions.html  functions_func.html  functions_vars.html  graph_legend.html  group__median_8hpp.html  (+186 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_4.js  classes_5.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  files_10.js  files_11.js  files_2.js  files_4.js  files_5.js  files_6.js  files_8.js  (+37 more)
include/tatami_stats/: count.hpp  counts.hpp  group_median.hpp  group_rss.hpp  group_sum.hpp  group_variance.hpp  grouped_medians.hpp  grouped_sums.hpp  grouped_variances.hpp  median.hpp  medians.hpp  quantile.hpp  quantiles.hpp  range.hpp  ranges.hpp  rss.hpp  sum.hpp  sums.hpp  tatami_stats.hpp  utils.hpp  variance.hpp  variances.hpp
include/tatami_stats/skip_nan/: group_rss.hpp  rss.hpp
tests/: CMakeLists.txt
tests/src/: count.cpp  counts.cpp  group_median.cpp  group_rss.cpp  group_sum.cpp  group_variance.cpp  grouped_medians.cpp  grouped_sums.cpp  grouped_variances.cpp  median.cpp  medians.cpp  quantile.cpp  quantiles.cpp  range.cpp  ranges.cpp  rss.cpp  sum.cpp  sums.cpp  utils.cpp  utils.h  variance.cpp  variances.cpp
tests/src/skip_nan/: group_rss.cpp  rss.cpp
